# Job-Parser

./: README.md  pyproject.toml
src/: database.ini  db_manager.py  main.py
