[tool.poetry]
name = "5"
version = "0.1.0"
description = ""
authors = ["Lotos <shelkovnikova.da@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi = "^2024.8.30"
charset-normalizer = "^3.3.2"
idna = "^3.10"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
urllib3 = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
